# bkmrk

./: .gitignore  Cargo.toml  README.md
bkmrk-lib/: Cargo.toml
bkmrk-lib/src/: bookmark.rs  db.rs  element.rs  lib.rs  netscape.pest  netscape_bookmark_parser.rs  netscape_parser.rs  site_metadata.rs
bkmrk-lib/src/utils/: files.rs  mod.rs
src/: app.rs  bookmark.rs  db.rs  main.rs  netscape_bookmark_parser.rs  utils.rs
src/subcommands/: add.rs  delete.rs  edit.rs  import.rs  ls.rs  mod.rs  tag.rs  update.rs
src/utils/: mod.rs
