[package]
edition = "2021"
name = "bkmrk"
version = "0.1.0"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
console = "0.15"
dialoguer = "0.9"
fern = "0.6"
color-eyre = "0.6"
tabled = "0.4"
terminal_size = "0.1"
bkmrk-lib = { path = "./bkmrk-lib", features = ["tables"] }
chrono = "0.4"
log = "0.4"
