[package]
name = "bkmrk-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
dirs = "4.0"
itertools = "0.10"
log = "0.4"
eyre = "0.6"
rusqlite = { version = "0.26", features = ["bundled", "chrono", "array"] }
quick-xml = "0.22"
nanoid = "0.4"
regex = "1.5"
tabled = { version = "0.4", optional = true }
unescape = "0.1"

[features]
tables = ["tabled"]
