[package]
name = "bkmrk-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
dirs = "4.0.0"
itertools = "0.10.3"
log = "0.4.14"
eyre = "0.6.6"
rusqlite = { version = "0.26.3", features = ["bundled", "chrono", "array"] }
quick-xml = "0.22.0"
nanoid = "0.4.0"
regex = "1.5.4"
tabled = { version = "0.5.0", optional = true }
unescape = "0.1.0"
webpage = "1.4.0"
pest = "2.1.3"
pest_derive = "2.1.0"

[features]
tables = ["tabled"]
